# matter_mq_air_quality

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32h2
components/adc_service/: CMakeLists.txt
components/adc_service/include/: adc_service.h
components/adc_service/src/: adc_service.c
components/air_quality_service/: CMakeLists.txt
components/air_quality_service/include/: air_quality_service.h
components/air_quality_service/src/: air_quality_service.c
components/analog_backend/: CMakeLists.txt
components/analog_backend/include/: analog_backend.h
components/analog_backend/src/: analog_backend.c
components/analog_mux/: CMakeLists.txt
components/analog_mux/include/: analog_mux.h
components/analog_mux/src/: analog_mux.c
components/board_config/: CMakeLists.txt
components/board_config/include/: board_config.h
components/board_config/src/: board_config.c
components/console_cmds/: CMakeLists.txt
components/console_cmds/include/: mq_console.h
components/console_cmds/src/: mq_console.c
components/matter_interface/: CMakeLists.txt
components/matter_interface/include/: matter_air_quality.h  matter_manager.h
components/matter_interface/src/: matter_air_quality.cpp  matter_manager.cpp
components/mq_calibration_nvs/: CMakeLists.txt
components/mq_calibration_nvs/include/: mq_calibration_nvs.h
components/mq_calibration_nvs/src/: mq_calibration_nvs.c
components/mq_runtime_config/: CMakeLists.txt
components/mq_sensor/: CMakeLists.txt
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
(+4 files in other folders)
